# PondoBro

./: .gitignore  PondoBro.sln
backend/: PondoBro.Backend.csproj  Program.cs  README.md  appsettings.json
backend/Controllers/: AuthController.cs  DashboardController.cs  TransactionsController.cs
backend/Data/: AppDbContext.cs
backend/Models/: Session.cs  Transaction.cs  User.cs
backend/Services/: JwtService.cs
frontend/: Cargo.toml  README.md  index.html  styles.css
frontend/src/: main.rs
